--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.06.2022 08:43:53</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.06.2022 09:11:20</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Čtvrtek, 16. 06. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Čočková s párkem</strong>
+<strong>Kari se žampiony</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřová JAMBALAYA</strong>
+<strong>Záhorácký závitek s vařeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							137,-
+							139,-
 						</span>
 </p>
 <p>
-<strong>Smažené kuřecí paličky s hranolkami a tatarkou</strong>
+<strong>Ledový salát s grilovaným kozím sýrem, pečenou paprikou a bagetkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
@@ -52,7 +52,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 16.6.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Ořechový cheesecake </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Pavlova roláda  (bez lepku) </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Čočkový salát se zeleninou, arašídy</div>
+<div class="cena">79 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Houbový krém v menu  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Houbový krém samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Cottage pie - hovězí maso zapečené s bramborovou kaší a sýrem cheddar, hrášek v máslové emulzí, polníček <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Pečené krůtí prso, sýrová omáčka, cherry rajčata, mladý špenát, pečené batáty <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Dýňové lasagne se špenátem, smetanová omáčka, rukola <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -85,7 +135,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s reckym citronovo-koprovym dresinkem, stouchane brambory se zelenou cibulkou, salatek z cervene repy 149</li><li>Spagety s chobotnici a kalamary, cerstvymi rajcaty, rimskym salatem a petrzelkovym pestem {L} 175</li><li>Korejske restovane veprove nudlicky s miso, sezamem, chilli a cesnekem, ryzove nudle, kedlubnove cukemono se zazvorem 149</li><li>Smazene rizecky z krutich prsou, stouchane brambory se zelenou cibulkou, salatek z cervene repy {L} 175</li><li>Bramborovy quiche s brokolici, listovym spenatem, cibuli a vejci zapeceny s ementalem, listovy salatek 149</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronem a dresinkem z celozrnne horcice, bramborovy salat s cerstvymi okurkami, zelenou cibulkou a majonezou 149</li><li>Peceny filet z cerstveho norskeho lososa s citronem a dresinkem z celozrnne horcice, bramborovy salat s cerstvymi okurkami, zelenou cibulkou a majonezou 175</li><li>Grilovany marocky kureci kebab {volny chov} s okurkovym tzatziki v arabske placce, bulgur, salatek {L} 149</li><li>Prsicka z lesniho holuba na portskem vine, pecene brambory s pecenou zeleninou, salatek 175</li><li>Gigantes plaki – velke maslove fazole v omacce z cerstvych rajcat a bylinek, ovci balkansky syr, arabske placky, salatek  {L} 149</li></ol>
 </td>
 </tr>
 </table>
